# pinpoint-eda

./: .gitignore  README.md  iam-policy.json  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape
src/pinpoint_eda/: __init__.py  __main__.py  _orchestrator.py  aws_session.py  checkpoint.py  cli.py  complexity.py  config.py  configurator.py  exceptions.py  executor.py  export.py  pagination.py  progress.py  rate_limiter.py  region_discovery.py  report.py
src/pinpoint_eda/scanners/: __init__.py  applications.py  base.py  campaigns.py  channels.py  event_streams.py  jobs.py  journeys.py  kpis.py  recommenders.py  segments.py  settings.py  sms_voice_v2.py  templates.py
tests/: conftest.py  test_checkpoint.py  test_cli.py  test_complexity.py  test_config.py  test_configurator.py  test_executor.py  test_export.py  test_pagination.py  test_rate_limiter.py  test_region_discovery.py  test_report.py
tests/test_scanners/: conftest.py  test_applications.py  test_campaigns.py  test_channels.py  test_journeys.py  test_kpis.py  test_segments.py  test_templates.py
